--- a/public/assignment/css/styles.css
+++ b/public/assignment/css/styles.css
@@ -1,3 +1,14 @@
+.piy-home {
+    font-size: xx-large;
+    text-align: center;
+    margin-top: 10%;
+    margin-bottom: 20px;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
 input, textarea {
     margin-bottom: 5px;
 }
@@ -77,8 +88,20 @@ input, textarea {
 }
 
 .piy .piy-image {
-    height: 300px;
-    width: 560px;
+    height: 350px;
+    width: 100%;
+}
+
+.video-container {
+    position: relative;
+    height: 360px;
+    overflow: hidden;
+}
+
+.video-container-iframe {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .piy .piy-glyphicon-split {
