--- a/public/assignment/pages/templates/page-list.html
+++ b/public/assignment/pages/templates/page-list.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Website list</title>
+    <title>Pages List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="css/styles.css"
+    <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy piy-body">
-    <div class="piy piy-website">
+    <div class="piy piy-page">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="profile.html" class="piy-glyphicon">
+                    <a href="../../websites/templates/website-list.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-header">
-                    <a class="navbar-brand">Websites</a>
+                    <a class="navbar-brand">Pages</a>
                 </div>
             </div>
         </nav>
@@ -28,11 +28,9 @@
             <ul class="list-group">
                 <li class="list-group-item active">
                     <div class="row">
-                        <div class="col-xs-5 col-sm-4">Name</div>
-                        <div class="col-xs-5 col-sm-3">Updated</div>
-                        <div class="col-sm-3 hidden-xs">Visits</div>
+                        <div class="col-xs-10">Name</div>
                         <div class="col-xs-2">
-                            <a href="website-new.html">
+                            <a href="page-new.html">
                                 <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                             </a>
                         </div>
@@ -40,15 +38,13 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5 col-sm-4">
-                            <a href="page-list.html">
-                                Facebook
+                        <div class="col-xs-10">
+                            <a href="../../widgets/templates/widget-list.html">
+                                Blog Post
                             </a>
                         </div>
-                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
-                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="website-edit.html">
+                            <a href="page-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -56,15 +52,13 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5 col-sm-4">
-                            <a href="page-list.html">
-                                Twitter
+                        <div class="col-xs-10">
+                            <a href="../../widgets/templates/widget-list.html">
+                                Home
                             </a>
                         </div>
-                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
-                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="website-edit.html">
+                            <a href="page-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -72,15 +66,13 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5 col-sm-4">
-                            <a href="page-list.html">
-                                Amazon
+                        <div class="col-xs-10">
+                            <a href="../../widgets/templates/widget-list.html">
+                                About
                             </a>
                         </div>
-                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
-                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="website-edit.html">
+                            <a href="page-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -88,15 +80,13 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-5 col-sm-4">
-                            <a href="page-list.html">
-                                Wikipedia
+                        <div class="col-xs-10">
+                            <a href="../../widgets/templates/widget-list.html">
+                                Contact Us
                             </a>
                         </div>
-                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
-                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="website-edit.html">
+                            <a href="page-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -108,7 +98,7 @@
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-text pull-right">
-                    <a href="index.html" class="piy-glyphicon">
+                    <a href="../../index.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </div>
