--- a/public/assignment/websites/templates/website-list.html
+++ b/public/assignment/websites/templates/website-list.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Pages List</title>
+    <title>Website list</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="css/styles.css"
+    <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy piy-body">
-    <div class="piy piy-page">
+    <div class="piy piy-website">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="website-list.html" class="piy-glyphicon">
+                    <a href="../../users/templates/profile.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-header">
-                    <a class="navbar-brand">Pages</a>
+                    <a class="navbar-brand">Websites</a>
                 </div>
             </div>
         </nav>
@@ -28,9 +28,11 @@
             <ul class="list-group">
                 <li class="list-group-item active">
                     <div class="row">
-                        <div class="col-xs-10">Name</div>
+                        <div class="col-xs-5 col-sm-4">Name</div>
+                        <div class="col-xs-5 col-sm-3">Updated</div>
+                        <div class="col-sm-3 hidden-xs">Visits</div>
                         <div class="col-xs-2">
-                            <a href="page-new.html">
+                            <a href="website-new.html">
                                 <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                             </a>
                         </div>
@@ -38,13 +40,15 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-10">
-                            <a href="widget-list.html">
-                                Blog Post
+                        <div class="col-xs-5 col-sm-4">
+                            <a href="../../pages/templates/page-list.html">
+                                Facebook
                             </a>
                         </div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
+                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="page-edit.html">
+                            <a href="website-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -52,13 +56,15 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-10">
-                            <a href="widget-list.html">
-                                Home
+                        <div class="col-xs-5 col-sm-4">
+                            <a href="../../pages/templates/page-list.html">
+                                Twitter
                             </a>
                         </div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
+                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="page-edit.html">
+                            <a href="website-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -66,13 +72,15 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-10">
-                            <a href="widget-list.html">
-                                About
+                        <div class="col-xs-5 col-sm-4">
+                            <a href="../../pages/templates/page-list.html">
+                                Amazon
                             </a>
                         </div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
+                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="page-edit.html">
+                            <a href="website-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -80,13 +88,15 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-10">
-                            <a href="widget-list.html">
-                                Contact Us
+                        <div class="col-xs-5 col-sm-4">
+                            <a href="../../pages/templates/page-list.html">
+                                Wikipedia
                             </a>
                         </div>
+                        <div class="col-xs-5 col-sm-3">07-14-2017</div>
+                        <div class="col-sm-3 hidden-xs">123,123</div>
                         <div class="col-xs-2">
-                            <a href="page-edit.html">
+                            <a href="website-edit.html">
                                 <span class="pull-right glyphicon glyphicon-cog"></span>
                             </a>
                         </div>
@@ -98,7 +108,7 @@
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-text pull-right">
-                    <a href="index.html" class="piy-glyphicon">
+                    <a href="../../index.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </div>
