--- a/public/assignment/widgets/templates/widget-choose.html
+++ b/public/assignment/widgets/templates/widget-choose.html
@@ -6,7 +6,7 @@
     <title>Choose widget</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="css/styles.css"
+    <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy piy-body">
@@ -141,7 +141,7 @@
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-text pull-right">
-                    <a href="index.html" class="piy-glyphicon">
+                    <a href="../../index.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </div>
