--- a/public/assignment/users/templates/login.view.client.html
+++ b/public/assignment/users/templates/login.view.client.html
@@ -1,37 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Login</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          rel="stylesheet"/>
-    <link href="css/styles.css"
-          rel="stylesheet"/>
-</head>
-<body>
-    <div class="container-fluid">
+<div class="container-fluid">
+    <div ng-controller="loginController">
         <h2>Login</h2>
 
+        <div ng-show="errorMessage" class="alert alert-danger">
+            {{errorMessage}}
+        </div>
+
         <input name="username"
+               ng-model="user.username"
                type="text"
                class="form-control"
                placeholder="Username"
                id="username"/>
 
         <input name="password"
+               ng-model="user.password"
                type="password"
                class="form-control"
                placeholder="Password"
                id="password"/>
 
         <a class="btn btn-default btn-primary btn-block"
-           href="profile.html"
+           ng-click="login(user)"
            role="button">Login</a>
 
         <a class="btn btn-default btn-success btn-block"
-           href="register.html"
+           href="#!register"
            role="button">Register</a>
     </div>
-</body>
-</html>
+</div>
