--- a/public/assignment/websites/templates/website-new.html
+++ b/public/assignment/websites/templates/website-new.html
@@ -6,7 +6,7 @@
     <title>New Website</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="css/styles.css"
+    <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy-body">
@@ -60,7 +60,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a href="page-list.html">
+                                    <a href="../../pages/templates/page-list.html">
                                         Facebook
                                     </a>
                                 </div>
@@ -74,7 +74,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a href="page-list.html">
+                                    <a href="../../pages/templates/page-list.html">
                                         Twitter
                                     </a>
                                 </div>
@@ -88,7 +88,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a href="page-list.html">
+                                    <a href="../../pages/templates/page-list.html">
                                         Amazon
                                     </a>
                                 </div>
@@ -102,7 +102,7 @@
                         <li class="list-group-item">
                             <div class="row">
                                 <div class="col-xs-10">
-                                    <a href="page-list.html">
+                                    <a href="../../pages/templates/page-list.html">
                                         Wikipedia
                                     </a>
                                 </div>
@@ -135,7 +135,7 @@
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
                 <div class="navbar-text pull-right">
-                    <a href="index.html" class="piy-glyphicon">
+                    <a href="../../index.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </div>
