--- a/public/assignment/widgets/templates/widget-list.html
+++ b/public/assignment/widgets/templates/widget-list.html
@@ -6,7 +6,7 @@
     <title>Widgets List</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="css/styles.css"
+    <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy piy-body">
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="page-list.html" class="piy-glyphicon">
+                    <a href="../../pages/templates/page-list.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
@@ -149,7 +149,7 @@
                     </a>
                 </div>
                 <div class="navbar-text pull-right">
-                    <a href="index.html" class="piy-glyphicon">
+                    <a href="../../index.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-home"></span>
                     </a>
                 </div>
