--- a/public/assignment/users/templates/register.view.client.html
+++ b/public/assignment/users/templates/register.view.client.html
@@ -1,28 +1,35 @@
 <div class="container-fluid">
     <h2>Register</h2>
 
+    <div ng-show="model.errorMessage" class="alert alert-danger">
+        {{model.errorMessage}}
+    </div>
+
     <input name="username"
+           ng-model="user.username"
            class="form-control"
            placeholder="Username"
            id="username"/>
 
     <input name="password"
+           ng-model="user.password"
            type="password"
            class="form-control"
            placeholder="Password"
            id="password"/>
 
     <input name="verifypassword"
+           ng-model="user.password2"
            type="password"
            class="form-control"
            placeholder="Verify Password"
            id="verifypassword"/>
 
     <a class="btn btn-default btn-primary btn-block"
-       href="#!profile/123"
+       ng-click="model.registerUser(user)"
        role="button">Register</a>
 
     <a class="btn btn-default btn-danger btn-block"
-       href="#!login"
+       href="#!/login"
        role="button">Cancel</a>
 </div>
