Assignment 3 Third Commit

--- a/public/assignment/pages/templates/page-list.html
+++ b/public/assignment/pages/templates/page-list.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="../../websites/templates/website-list.html" class="piy-glyphicon">
+                    <a href="../../websites/templates/website-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
