--- a/public/assignment/websites/templates/website-edit.view.client.html
+++ b/public/assignment/websites/templates/website-edit.view.client.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>New Website</title>
+    <title>Edit Website</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy-body">
-    <div class="piy piy-newwebsite">
+    <div class="piy piy-editwebsite">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-4 visible-lg">
                         <div class="navbar-text pull-left">
-                            <a href="website-list.html" class="piy-glyphicon">
+                            <a href="website-list.view.client.html" class="piy-glyphicon">
                                 <span class="glyphicon glyphicon-chevron-left"></span>
                             </a>
                         </div>
@@ -26,17 +26,17 @@
                     </div>
                     <div class="col-xs-12 col-lg-8">
                         <div class="navbar-text pull-left hidden-lg">
-                            <a href="website-list.html" class="piy-glyphicon">
+                            <a href="website-list.view.client.html" class="piy-glyphicon">
                                 <span class="glyphicon glyphicon-chevron-left"></span>
                             </a>
                         </div>
                         <div class="navbar-text pull-right">
-                            <a href="website-list.html" class="piy-glyphicon">
+                            <a href="website-list.view.client.html" class="piy-glyphicon">
                                 <span class="glyphicon glyphicon-ok"></span>
                             </a>
                         </div>
                         <div class="navbar-header">
-                            <a class="navbar-brand">New Website</a>
+                            <a class="navbar-brand">Edit Website</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             <div class="row">
                                 <div class="col-xs-10">Name</div>
                                 <div class="col-xs-2">
-                                    <a href="website-new.html">
+                                    <a href="website-new.view.client.html">
                                         <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                                     </a>
                                 </div>
@@ -65,7 +65,7 @@
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="website-edit.html">
+                                    <a href="website-edit.view.client.html">
                                         <span class="pull-right glyphicon glyphicon-cog"></span>
                                     </a>
                                 </div>
@@ -79,7 +79,7 @@
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="website-edit.html">
+                                    <a href="website-edit.view.client.html">
                                         <span class="pull-right glyphicon glyphicon-cog"></span>
                                     </a>
                                 </div>
@@ -93,7 +93,7 @@
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="website-edit.html">
+                                    <a href="website-edit.view.client.html">
                                         <span class="pull-right glyphicon glyphicon-cog"></span>
                                     </a>
                                 </div>
@@ -107,7 +107,7 @@
                                     </a>
                                 </div>
                                 <div class="col-xs-2">
-                                    <a href="website-edit.html">
+                                    <a href="website-edit.view.client.html">
                                         <span class="pull-right glyphicon glyphicon-cog"></span>
                                     </a>
                                 </div>
@@ -116,18 +116,23 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-lg-8 piy-split-view-right">
-                    <label for="name">Name</label>
-                    <input name="name"
+                    <label for="websitename">Website Name</label>
+                    <input name="websitename"
                            class="form-control"
                            placeholder="Website Name"
-                           id="name"/>
+                           value="Facebook"
+                           id="websitename"/>
 
-                    <label for="description">Description</label>
+                    <label for="description">Website Description</label>
                     <textarea name="description"
                               rows="5"
                               class="form-control"
-                              placeholder="Description"
-                              id="description"></textarea>
+                              placeholder="Website Description"
+                              id="description">Facebook is a social networking site which helps people to connect with their loved ones.</textarea>
+
+                    <a class="btn btn-default btn-danger btn-block"
+                       href="website-list.view.client.html"
+                       role="button">Delete</a>
                 </div>
             </div>
         </div>
