--- a/public/assignment/widgets/templates/widget-choose.view.client.html
+++ b/public/assignment/widgets/templates/widget-choose.view.client.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="widget-list.html" class="piy-glyphicon">
+                    <a href="widget-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
@@ -28,7 +28,7 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
-                        <a href="widget-heading.html">
+                        <a href="widget-heading.view.client.html">
                             <div class="col-xs-9">Header</div>
                             <div class="col-xs-3">
                                 <span class="pull-right glyphicon glyphicon-pencil"></span>
@@ -94,7 +94,7 @@
 
                 <li class="list-group-item">
                     <div class="row">
-                        <a href="widget-image.html">
+                        <a href="widget-image.view.client.html">
                             <div class="col-xs-9">Image</div>
                             <div class="col-xs-3">
                                 <span class="pull-right glyphicon glyphicon-pencil"></span>
@@ -105,7 +105,7 @@
 
                 <li class="list-group-item">
                     <div class="row">
-                        <a href="widget-youtube.html">
+                        <a href="widget-youtube.view.client.html">
                             <div class="col-xs-9">Youtube</div>
                             <div class="col-xs-3">
                                 <span class="pull-right glyphicon glyphicon-pencil"></span>
