--- a/public/assignment/widgets/templates/widget-list.view.client.html
+++ b/public/assignment/widgets/templates/widget-list.view.client.html
@@ -14,12 +14,12 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="../../pages/templates/page-list.html" class="piy-glyphicon">
+                    <a href="../../pages/templates/page-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-text pull-right">
-                    <a href="widget-choose.html" class="piy-glyphicon">
+                    <a href="widget-choose.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-plus"></span>
                     </a>
                 </div>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 piy-glyphicon-split">
-                    <a href="widget-heading.html">
+                    <a href="widget-heading.view.client.html">
                         <span class="glyphicon glyphicon-align-justify pull-right piy-justify-glyphi"></span>
                         <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
                     </a>
@@ -68,7 +68,7 @@
                          alt="Responsive image">
                 </div>
                 <div class="col-xs-12 piy-glyphicon-split">
-                    <a href="widget-image.html">
+                    <a href="widget-image.view.client.html">
                         <span class="glyphicon glyphicon-align-justify pull-right piy-justify-glyphi"></span>
                         <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
                     </a>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 piy-glyphicon-split">
-                    <a href="widget-heading.html">
+                    <a href="widget-heading.view.client.html">
                         <span class="glyphicon glyphicon-align-justify pull-right piy-justify-glyphi"></span>
                         <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
                     </a>
@@ -116,7 +116,7 @@
                             class="center-block video-container-iframe"></iframe>
                 </div>
                 <div class="col-xs-12 piy-glyphicon-split">
-                    <a href="widget-youtube.html">
+                    <a href="widget-youtube.view.client.html">
                         <span class="glyphicon glyphicon-align-justify pull-right piy-justify-glyphi"></span>
                         <span class="glyphicon glyphicon-cog pull-right piy-cog-glyphi"></span>
                     </a>
