--- a/public/assignment/pages/templates/page-list.view.client.html
+++ b/public/assignment/pages/templates/page-list.view.client.html
@@ -1,13 +1,13 @@
-<div class="piy piy-body piy-website">
+<div class="piy piy-body piy-page">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-text pull-left">
-                <a href="#!/profile/{{model.userId}}" class="piy-glyphicon">
+                <a href="#!/user/{{model.userId}}/website" class="piy-glyphicon">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
             </div>
             <div class="navbar-header">
-                <a class="navbar-brand">Websites</a>
+                <a class="navbar-brand">Pages</a>
             </div>
         </div>
     </nav>
@@ -16,27 +16,23 @@
         <ul class="list-group">
             <li class="list-group-item active">
                 <div class="row">
-                    <div class="col-xs-5 col-sm-4">Name</div>
-                    <div class="col-xs-5 col-sm-3">Updated</div>
-                    <div class="col-sm-3 hidden-xs">Visits</div>
+                    <div class="col-xs-10">Name</div>
                     <div class="col-xs-2">
-                        <a href="#!/user/{{model.userId}}/website/new">
+                        <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/new">
                             <span class="pull-right glyphicon glyphicon-plus piy-glyphicon"></span>
                         </a>
                     </div>
                 </div>
             </li>
-            <li ng-repeat="website in model.websites" class="list-group-item">
+            <li ng-repeat="page in model.pages" class="list-group-item">
                 <div class="row">
-                    <div class="col-xs-5 col-sm-4">
-                        <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
-                            {{website.name}}
+                    <div class="col-xs-10">
+                        <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/{{page._id}}/widget">
+                            {{page.name}}
                         </a>
                     </div>
-                    <div class="col-xs-5 col-sm-3">07-14-2017</div>
-                    <div class="col-sm-3 hidden-xs">123,123</div>
                     <div class="col-xs-2">
-                        <a href="#!/user/{{model.userId}}/website/{{website._id}}">
+                        <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/{{page._id}}">
                             <span class="pull-right glyphicon glyphicon-cog"></span>
                         </a>
                     </div>
