--- a/public/assignment/websites/templates/website-new.view.client.html
+++ b/public/assignment/websites/templates/website-new.view.client.html
@@ -48,12 +48,12 @@
                     <li ng-repeat="website in model.websites" class="list-group-item">
                         <div class="row">
                             <div class="col-xs-10">
-                                <a href="../../pages/templates/page-list.html">
+                                <a href="#!/user/{{model.userId}}/website/{{website._id}}/page">
                                     {{website.name}}
                                 </a>
                             </div>
                             <div class="col-xs-2">
-                                <a href="website-edit.view.client.html">
+                                <a href="#!/user/{{model.userId}}/website/{{website._id}}">
                                     <span class="pull-right glyphicon glyphicon-cog"></span>
                                 </a>
                             </div>
@@ -90,7 +90,7 @@
         <div class="container-fluid">
             <div class="navbar-text pull-right">
                 <a href="#!/profile/{{model.userId}}" class="piy-glyphicon">
-                    <span class="glyphicon glyphicon-home"></span>
+                    <span class="glyphicon glyphicon-user"></span>
                 </a>
             </div>
         </div>
