--- a/public/assignment/widgets/templates/widget-heading.view.client.html
+++ b/public/assignment/widgets/templates/widget-heading.view.client.html
@@ -14,12 +14,12 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="widget-list.html" class="piy-glyphicon">
+                    <a href="widget-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-text pull-right">
-                    <a href="widget-list.html" class="piy-glyphicon">
+                    <a href="widget-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </div>
@@ -55,7 +55,7 @@
             </select>
 
             <a class="btn btn-default btn-danger btn-block"
-               href="widget-list.html"
+               href="widget-list.view.client.html"
                role="button">Delete</a>
         </div>
 
