--- a/public/assignment/widgets/templates/widget-youtube.view.client.html
+++ b/public/assignment/widgets/templates/widget-youtube.view.client.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Widget Image</title>
+    <title>Widget Youtube</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           rel="stylesheet"/>
     <link href="../../css/styles.css"
           rel="stylesheet"/>
 </head>
 <body class="piy piy-body">
-    <div class="piy piy-widgetimage">
+    <div class="piy piy-widgetyoutube">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-text pull-left">
-                    <a href="widget-list.html" class="piy-glyphicon">
+                    <a href="widget-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                 </div>
                 <div class="navbar-text pull-right">
-                    <a href="widget-list.html" class="piy-glyphicon">
+                    <a href="widget-list.view.client.html" class="piy-glyphicon">
                         <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </div>
@@ -53,22 +53,11 @@
             <label for="width">Width</label>
             <input name="width"
                    class="form-control"
-                   placeholder="Width"
-                   value="100%"
+                   placeholder="100%"
                    id="width"/>
 
-            <label for="upload">Upload</label>
-            <input name="upload"
-                   type="file"
-                   class="form-control"
-                   id="upload"/>
-
-            <a class="btn btn-default btn-primary btn-block"
-               href="widget-image.html"
-               role="button">Upload Image</a>
-
             <a class="btn btn-default btn-danger btn-block"
-               href="widget-list.html"
+               href="widget-list.view.client.html"
                role="button">Delete</a>
         </div>
 
